# tessera

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TYPE_ERROR_REDUCTION_SUMMARY.md  basedpyright_after.txt  basedpyright_before.txt  basedpyright_current.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  troubleshooting.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: cli.md
docs/user-guide/: configuration.md  memory.md  multi-agent.md  observability.md  tools.md  workspace.md
src/tessera/: __init__.py  config.py  copilot_proxy.py  graph_base.py  interviewer.py  interviewer_cache.py  interviewer_graph.py  legacy_config.py  llm.py  logging_config.py  model_validator.py  models.py  panel.py  panel_graph.py  premium_models.py  secrets.py  slack_approval.py  slack_hitl.py  supervisor.py  supervisor_graph.py
src/tessera/api/: __init__.py  server.py  session.py
src/tessera/cli/: main.py  multi_agent_execution.py
src/tessera/cli/commands/: main_cmd.py
src/tessera/config/: __init__.py  schema.py  subphase_models.py  xdg.py  yaml_source.py
src/tessera/memory/: __init__.py  long_term.py  vector_store.py
src/tessera/observability/: __init__.py  callbacks.py  cost.py  cost_prediction.py  metrics.py  tracer.py
src/tessera/plugins/: __init__.py  loader.py  manager.py  mcp_integration.py
src/tessera/slack/: __init__.py  agent_identity.py  multi_channel.py
src/tessera/tools/: __init__.py  access_control.py  discovery.py  execution.py
src/tessera/visualization/: __init__.py  dag.py
src/tessera/workflow/: __init__.py  action_logger.py  agent_pool.py  multi_agent_executor.py  phase_executor.py  process_monitor.py  progress_display.py  quality_monitor.py  subphase_handler.py  task_queue.py  templates.py
src/tessera/workspace/: __init__.py  filesystem_protection.py  manager.py  sandbox.py
tests/: conftest.py  test_agent_pool_extended.py  test_api_integration.py  test_async_executor.py  test_cli.py  test_cli_extended.py  test_cli_integration.py  test_cli_main_cmd.py  test_config.py  test_config_helpers.py  test_config_schema.py  test_copilot_proxy.py  test_cost_prediction.py  test_integration.py  test_interview_cache.py  test_interviewer.py  test_interviewer_graph.py  test_llm.py  test_mcp_integration.py  test_memory.py  test_model_validator.py  test_models.py  test_models_extended.py  test_multi_agent_executor.py  test_observability.py  test_observability_extended.py  test_panel.py  test_panel_graph.py  test_phase_executor.py  test_plugin_loader.py  test_plugins.py  test_premium_models.py  test_process_monitor.py  test_quality_monitor.py  test_secrets.py  test_session_management.py  test_slack_approval.py  test_slack_extended.py  test_slack_hitl.py  test_slack_integration.py  (+16 more)
