[project]
name = "tessera-agents"
version = "1.0.0"
description = "No-code multi-agent AI orchestration for full project generation. Like mosaic tiles, specialized agents coordinate to build complete software projects."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Will Gordon", email = "w@wgordon.net"}]
maintainers = [{name = "Will Gordon", email = "w@wgordon.net"}]
keywords = [
    "ai",
    "multi-agent",
    "orchestration",
    "llm",
    "automation",
    "cli",
    "langchain",
    "langgraph",
    "pydantic",
    "project-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-litellm>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings[yaml]>=2.12.0",
    "rich>=13.0.0",
    "textual>=0.47.0",
    "typer>=0.9.0",
    "requests>=2.31.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "slack-sdk>=3.38.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "google-cloud-aiplatform>=1.38",
]

[project.urls]
Homepage = "https://github.com/tessera-agents/tessera"
Documentation = "https://tessera.readthedocs.io"
Repository = "https://github.com/tessera-agents/tessera"
"Source Code" = "https://github.com/wgordon17/tessera"
Issues = "https://github.com/tessera-agents/tessera/issues"
Changelog = "https://github.com/tessera-agents/tessera/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
]

[project.scripts]
tessera = "tessera.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
cache-dir = ".cache/uv"

[tool.ruff]
line-length = 100
target-version = "py313"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle - add selectively
    "COM812",  # Trailing comma (formatter conflict)
    "ISC001",  # Implicit string concat (formatter conflict)
    "EM",      # Error message strings (pragmatic)
    "FBT",     # Boolean positional args (common pattern)
    "TRY003",  # Long exception messages (readable errors)
    "TRY300",  # try-else pattern (not always clearer)
    "B904",    # Exception chaining (not always needed)
    "C901",    # Complexity (some functions naturally complex)
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic values (context-dependent)
    "TID252",  # Relative imports (fine for internal modules)
    "G004",    # Logging f-strings (modern idiom)
    "S603",    # subprocess without shell check (we control input)
    "S607",    # Partial executable path (intentional)
    "S105",    # Hardcoded password (false positives)
    "S106",    # Hardcoded password in arg (false positives)
    "S108",    # Hardcoded temp file (intentional)
    "DTZ",     # Datetime without timezone (not needed for local use)
    "RUF001",  # Ambiguous unicode (false positives)
    "PTH123",  # open() vs Path.open() (open() is fine)
    "PLC0415", # Import at top (acceptable in some contexts)
    "SIM117",  # Multiple with statements (readable)
    "PLW0603", # Global statements (intentional for singletons)
    "ARG002",  # Unused method args (interface compliance)
    "PERF401", # List comprehension (readability over micro-optimization)
    "PT011",   # Pytest raises too broad (pragmatic)
    "RUF043",  # Pytest raises pattern (pragmatic)
    "B007",    # Unused loop var (intentional in some cases)
    "PLW2901", # Redefined loop name (readability)
    "RUF012",  # Mutable class default (intentional)
    "S608",    # Hardcoded SQL (not user input)
    "TRY401",  # Verbose logging (readable)
    "ERA001",  # Commented code (intentional examples)
    "PTH207",  # glob vs Path.glob (both fine)
    "S110",    # try-except-pass (intentional suppression)
    "SIM102",  # Collapsible if (readability)
    "SIM103",  # Needless bool (readability)
    "TRY301",  # raise in try (acceptable pattern)
    "PGH003",  # Blanket type ignore (technical debt, will fix)
    "B023",    # Function uses loop variable (careful usage)
    "BLE001",  # Blind except (catch Exception is pragmatic)
    "ANN401",  # Any type (needed for dynamic/generic code)
    "E501",    # Line too long (formatter handles most cases)
    "SLF001",  # Private member access (intentional in tests/internal)
    "F811",    # Redefined (will fix in tests)
    "PLW0602", # Global variable (singletons)
    "ARG001",  # Unused arg (interface)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert usage
    "PLR2004", # Magic values
    "ARG",     # Unused pytest fixtures
    "ANN",     # Type annotations
    "SLF001",  # Private member access
    "PLC0415", # Import placement
]
"src/tessera/cli/*" = [
    "T201",    # print() allowed in CLI
]

[tool.mypy]
python_version = "3.13"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
cache_dir = ".cache/mypy"
disable_error_code = ["type-arg", "no-any-return"]

[tool.coverage.run]
data_file = ".cache/.coverage"

[tool.coverage.html]
directory = ".cache/coverage"

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = ".cache/pytest"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/tessera",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-branch",
    "--cov-fail-under=85",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "slow: Tests that take significant time to run",
]
# Pytest 9.0 features
console_output_style = "progress-even-when-capture-no"
verbosity_assertions = 2
log_cli = false
log_cli_level = "INFO"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]
