[project]
name = "tessera-agents"
version = "0.3.0"
description = "No-code multi-agent AI orchestration for full project generation. Like mosaic tiles, specialized agents coordinate to build complete software projects."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Will Gordon", email = "w@wgordon.net"}]
maintainers = [{name = "Will Gordon", email = "w@wgordon.net"}]
keywords = [
    "ai",
    "multi-agent",
    "orchestration",
    "llm",
    "automation",
    "cli",
    "langchain",
    "langgraph",
    "pydantic",
    "project-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-litellm>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings[yaml]>=2.12.0",
    "rich>=13.0.0",
    "textual>=0.47.0",
    "typer>=0.9.0",
    "requests>=2.31.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "slack-sdk>=3.38.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "google-cloud-aiplatform>=1.38",
    "psutil>=7.1.3",
]

[project.urls]
Homepage = "https://github.com/tessera-agents/tessera"
Documentation = "https://tessera.readthedocs.io"
Repository = "https://github.com/tessera-agents/tessera"
"Source Code" = "https://github.com/wgordon17/tessera"
Issues = "https://github.com/tessera-agents/tessera/issues"
Changelog = "https://github.com/tessera-agents/tessera/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
]

[project.scripts]
tessera = "tessera.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
cache-dir = ".cache/uv"

[tool.ruff]
line-length = 120
target-version = "py313"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle
    "COM812",  # Trailing comma (formatter conflict)
    "ISC001",  # Implicit concat (formatter conflict)
    "ANN401",  # Any type (dynamic code)
    "EM101",   # Exception messages (approved)
    "EM102",   # Exception f-strings (approved)
    "TRY003",  # Raise vanilla (same as EM)
    "FBT",     # Boolean args (approved)
    "G004",    # Logging f-strings (approved)
    "PLC0415", # Lazy imports (approved)
    "TID252",  # Relative imports (approved)
    "ARG001",  # Unused arg (interface)
    "ARG002",  # Unused method arg (interface)
    "PLW0603", # Global statement (singletons)
    "TRY300",  # try-else
    "TRY301",  # raise in try
    "S603",    # subprocess
    "S607",    # Partial path
    "S608",    # SQL
    "SLF001",  # Private member
    "RUF001",  # Ambiguous unicode
    "RUF012",  # Mutable class
    "ERA001",  # Commented code
    "PLW0602", # Global read-only
    "PLW2901", # Redefined loop
    "TRY401",  # Verbose logging
    "SIM102",  # Nested if
    "SIM103",  # Needless bool
    "PLR0911", # Too many returns
    "E402",    # Import not at top
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S10",     # Security false positives in tests
    "PT011",   # pytest.raises without match
    "RUF043",  # Unpacked dict in for loop
    "PGH003",  # Type ignore without code
    "B023",    # Function definition in loop
    "B007",    # Unused loop variable
    "PLR2004", # Magic value in comparison (test assertions)
    "PLR0913", # Too many arguments (fixtures in tests)
    "PERF401", # Manual list comprehension (readability in tests)
    "SIM117",  # Nested with statements (test mocking)
    "ANN",     # Type annotations
    "SLF001",  # Private member access
]

[tool.mypy]
python_version = "3.13"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
cache_dir = ".cache/mypy"
disable_error_code = ["type-arg", "no-any-return"]

[tool.coverage.run]
data_file = ".cache/.coverage"

[tool.coverage.html]
directory = ".cache/coverage"

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = ".cache/pytest"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/tessera",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-branch",
    "--cov-fail-under=75",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "slow: Tests that take significant time to run",
]
console_output_style = "progress-even-when-capture-no"
verbosity_assertions = 2
log_cli = false
log_cli_level = "INFO"

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".cache"]
skips = [
    "B105",  # hardcoded password (false positive)
    "B101",  # assert usage in tests
    "B110",  # try-except-pass (intentional)
    "B404",  # subprocess import (needed)
    "B603",  # subprocess without shell (validated)
    "B607",  # partial executable path (in PATH)
    "B608",  # SQL injection (parameterized queries)
]

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]
